kubernetes/apps/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    pod-security.kubernetes.io/enforce: restricted
