kubernetes/apps/paperless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-app-wildcard
  hostnames:
    - paperless.${CLUSTER_DOMAIN}
    - paperless.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 8000
